--- a/sitio/css/generalStyle.css
+++ b/sitio/css/generalStyle.css
@@ -197,3 +197,11 @@ input[type=number]::-webkit-outer-spin-button {
 .cita-afiliado-panel{
     margin-bottom:40px;
 }
+
+.collapse-diagnostico{
+    margin-top: 10px;
+}
+
+.btn-diagnostico{
+    width:100%;
+}
