--- a/sitio/css/generalStyle.css
+++ b/sitio/css/generalStyle.css
@@ -206,3 +206,8 @@ input[type=number]::-webkit-outer-spin-button {
     width:100%;
     margin-top:10px;
 }
+
+.multas-div{
+    margin-top:40px;
+    margin-bottom: 40px;
+}
