--- a/ProyectoEPS/ProyectoEPS/Views/HtmlPage1.html
+++ b/ProyectoEPS/ProyectoEPS/Views/HtmlPage1.html
@@ -19,7 +19,15 @@
                 
             </div>
         </div>
-    </div>
+        <div>
+            <button id="btnupload" class="mdi-action-bug-report">subir</button>
+            <input type="file" id="uploadFile" />
+            <button id="mostrarI" class="mdi-action-bug-report">mostrar</button>
+            <div id="divVer" class="row">
+
+            </div>
+        </div>
+    </div> 
     <script type="text/javascript" src="../JS/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="../JS/materialize.js"></script>
     <script type="text/javascript" src="../JS/Scripts/JavaScript1.js"></script>
