--- a/sitio/css/generalStyle.css
+++ b/sitio/css/generalStyle.css
@@ -219,3 +219,7 @@ input[type=number]::-webkit-outer-spin-button {
 .cita-panel{
     margin-top:30px;
 }
+
+.panel-pendiente{
+    margin-bottom: 30px;
+}
